# ChemistryStepForCFD

./: CMakeLists.txt  README.md
include/: hires_problem.h  solver.h
old/: README.txt  main1.cpp  main2.cpp
old/include/: problem_base.h
old/old/: CMakeLists.txt  README.txt  main3.cpp  main4.cpp  main5.cpp
old/src/: hires_problem.cpp  main.cpp  problem_base.cpp
src/: solver.cpp
